<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pebble 1.0.2</string>
    <string name="description"></string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="key_settings_about_appinfo">settings_about_appinfo</string>

	<string name="page01">[1/5] Pebbleを検出可能にする</string>
	<string name="page02">[2/5] Pebbleとペアリングする</string>
	<string name="page03">[3/5] Pebbleアプリでの設定</string>
	<string name="page04">[4/5] Pebble側のアプリのインストール</string>
	<string name="page05">[5/5] Pebbleの設定完了です</string>
    
    <string name="index1">Pebbleのメニューから、Bluetoothの項目を選びPebbleをスマフォから検出可能な状態にします。</string>
	<string name="index2">Pebbleとペアリング接続をおこないます。</string>
	<string name="index3">Pebbleアプリのダウンロードとインストール、実行をおこないます。</string>
	<string name="index4">Pebble側で使用するアプリのインストールをおこないます。</string>
	<string name="index5">これで、Pebble接続設定完了です。</string>
	<string name="step2_button_text">設定画面を開く</string>

	<string name="page01_explain01">1) 既にペアリングが終了している場合、3ページに進んでください。</string>
	<string name="page01_explain02">2) Pebbleのsettingを選択してください。</string>
	<string name="page01_explain03">3) settingのBuletoothを選択してください。</string>
	<string name="page01_explain04">4) BuletoothをONにしてください。</string>
			
	<string name="page02_explain01">端末のBluetooth設定画面上よりPebbleとのペアリングを実行してください。</string>
	
	<string name="page03_explain01">1) Google PlayからPebble社の管理アプリをインストールして、アプリの指示に従いPebbleと端末を接続してください。</string>
	<string name="page03_explain02">2) 接続が完了できたなら、4ページに進み手続きを続けてください。</string>
	<string name="page03_button01">Google Play</string>

	<string name="page04_explain01">インストールボタンをタップし Update Pebbleを選択、インストールを実行して下さい。</string>
	<string name="page04_button01">インストール</string>
	<string name="page04_error01">[3/5]Pebbleアプリでの設定を先に行ってください</string>
						
	<string name="page05_explain01">以上でPebbleとの接続設定は完了です。</string>
</resources>
