<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="0sp" >

        <TextView
            android:id="@+id/textViewNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00a0e9"
        	android:textColor="#ffffff"
            android:gravity="center"
            android:text="@string/page04"
            android:textSize="20dip" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:padding="24dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/index4"
                android:textColor="#666666"
                android:textSize="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/page04_explain01"
                android:textColor="#666666" />

            <Button
                android:id="@+id/dconnect_settings_step_4_button_install_plugin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/page04_button01" 
                android:background="@drawable/button_blue"
                android:textColor="#FFFFFF"
                
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>