<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="0sp" >

        <TextView
            android:id="@+id/textViewNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00a0e9"
        	android:textColor="#ffffff"
            android:gravity="center"
            android:text="@string/page03"
            android:textSize="20dip" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:padding="24dp" >

            <TextView
                android:id="@+id/dconnect_settings_step_3_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/index3"
                android:textColor="#666666"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/dconnect_settings_step_3_description_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/page03_explain01"
                android:textColor="#666666" />

            <TextView
                android:id="@+id/dconnect_settings_step_3_description_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/page03_explain02"
                android:textColor="#666666" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="0dp" >
              
            <Button
                android:id="@+id/dconnect_settings_step_3_button_install_pebble"
                android:layout_width="220dp"
                android:layout_height="70dp"
                android:background="@drawable/button_google_play"
                android:textColor="#FFFFFF"
             />
            
        </LinearLayout>

    </LinearLayout>

</LinearLayout>